--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/openai": "^0.0.68",
     "@effect/platform": "^0.68.6",
     "@effect/platform-node": "^0.63.6",
+    "@neondatabase/serverless": "^0.10.4",
     "@next/env": "^14.2.15",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -45,6 +46,7 @@
     "lucide-react": "^0.453.0",
     "next": "15.0.4-canary.22",
     "openai": "^4.68.0",
+    "postgres": "^3.4.5",
     "react": "19.0.0-rc-cd22717c-20241013",
     "react-dom": "19.0.0-rc-cd22717c-20241013",
     "react-scan": "^0.0.35",
@@ -52,12 +54,14 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/ws": "^8.5.13",
     "drizzle-kit": "^0.26.2",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.1",
